--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="">
 	<title>HKEdcity exercises</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="cache-control" content="max-age=0" />
 	<meta http-equiv="cache-control" content="no-cache" />
 	<meta http-equiv="expires" content="0" />
@@ -460,9 +461,42 @@
 		</div>
 	</div>
 </script>
+
+<!-- Drag and Drop (line matching): Top Drag - Bottom Drop -->
+<script id="layout-13-template" type="x-template">
+	<div class="owl-carousel">
+		<div class="question" v-repeat="question: questions">
+			<h1 class="exercise__question exercise__question-number">
+				{{question.index+1}}. {{question.questionText}}
+				<i class="fa " v-class="fa-check-circle:question.correct, fa-times-circle:question.wrong"></i>
+			</h1>
+			<div class="exercise__answer-list-outer">
+				<div class="dragzones-outer">
+					<ol id="dragzone-{{$index}}" v-repeat="dragPool: question.dragPools" class="dragzone exercise__answer-list type-{{dragPool.type}} row">
+						<li class="exercise__answer type-{{answer.type}} col-xs-3" v-repeat="answer: question.answers"
+							v-class="
+								is-correct-answer: answer.correct,
+								is-selected: answer.selected
+							" v-on="click: chooseAnswer(question, answer)">
+							<span class="exercise__answer-text">
+								{{ answer.text }}
+							</span>
+						</li>
+					</ol>
+				</div>
+				<div class="dropzones-outer clearfix">
+					<ol id="dropzone-{{$index}}" v-repeat="dropPool: question.dropPools" class="dropzone exercise__answer-list type-{{dropPool.type}}" v-attr="data-text: dropPool.text">
+					</ol>
+				</div>
+				<svg id="draw-panel"></svg>
+			</div>
+		</div>
+	</div>
+</script>
 	
 	<script src="vendor/owl.carousel/owl.carousel.js"></script>
 	<script src="vendor/dragula/dragula.min.js"></script>
+	<script src="vendor/d3.min.js" charset="utf-8"></script>
 	<script src="js/book.js"></script>
 	<script src="js/validatemethods.js"></script>
 	<script src="js/dragndropmethods.js"></script>
