Add chapter and exercise specific classes to #chapter

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
 	<div class="container">
 		<div id="book" class="content book">
-			<div id="chapter" class="chapter layout-{{layoutNumber}}" v-class="all-correct: allCorrect">
+			<div id="chapter" class="ch{{chapterNum}} ex{{exerciseNum}} layout-{{layoutNumber}}" v-class="all-correct: allCorrect">
 				<div class="row header">
 					<div class="col-xs-9">
 						<div class="exercise__name-outer">
