--- a/index.html
+++ b/index.html
@@ -236,7 +236,8 @@
 	<div class="owl-carousel">
 		<div v-repeat="question: questions">
 			<div class="exercise__question-number">
-				{{question.index+1}}.
+				<span class="question-number">{{question.index+1}}.</span>
+				<span class="exercise__question-text">{{question.questionText}}</span>
 			</div>
 			<div class="row">
 				<div class="exercise__question  col-xs-10">
@@ -289,7 +290,8 @@
 	<div class="owl-carousel">
 		<div v-repeat="question: questions" v-class="is-wrong: question.wrong">
 			<div class="exercise__question-number">
-				{{question.index+1}}. {{question.text}}
+				<span class="question-number">{{question.index+1}}.</span>
+				<span class="exercise__question-text">{{question.questionText}}</span>
 				<i class="fa" v-class="fa-check-circle:question.correct, fa-times-circle:question.wrong"></i>
 			</div>
 			<div class="exercise__question row">
@@ -321,7 +323,8 @@
 	<div class="owl-carousel">
 		<div class="question" v-repeat="question: questions">
 			<h1 class="exercise__question exercise__question-number ">
-				{{question.index+1}}. {{question.questionText}}
+				<span class="question-number">{{question.index+1}}.</span>
+				<span class="exercise__question-text">{{question.questionText}}</span>
 				<i class="fa " v-class="fa-check-circle:question.correct, fa-times-circle:question.wrong"></i>
 			</h1>
 			<div class="row">
@@ -350,7 +353,8 @@
 	<div class="owl-carousel">
 		<div class="question" v-repeat="question: questions">
 			<h1 class="exercise__question exercise__question-number">
-				{{question.index+1}}. {{question.questionText}}
+				<span class="question-number">{{question.index+1}}.</span>
+				<span class="exercise__question-text">{{question.questionText}}</span>
 				<i class="fa " v-class="fa-check-circle:question.correct, fa-times-circle:question.wrong"></i>
 			</h1>
 			<div class="row">
@@ -383,7 +387,8 @@
 	<div class="owl-carousel">
 		<div class="question" v-repeat="question: questions">
 			<h1 class="exercise__question exercise__question-number">
-				{{question.index+1}}. {{question.questionText}}
+				<span class="question-number">{{question.index+1}}.</span>
+				<span class="exercise__question-text">{{question.questionText}}</span>
 				<i class="fa " v-class="fa-check-circle:question.correct, fa-times-circle:question.wrong"></i>
 			</h1>
 			<div class="exercise__answer-list-outer">
@@ -415,7 +420,8 @@
 	<div class="owl-carousel">
 		<div class="question" v-repeat="question: questions">
 			<h1 class="exercise__question exercise__question-number">
-				{{question.index+1}}. {{question.questionText}}
+				<span class="question-number">{{question.index+1}}.</span>
+				<span class="exercise__question-text">{{question.questionText}}</span>
 				<i class="fa " v-class="fa-check-circle:question.correct, fa-times-circle:question.wrong"></i>
 			</h1>
 			<div class="exercise__answer-list-outer">
@@ -446,7 +452,8 @@
 	<div class="owl-carousel">
 		<div class="question" v-repeat="question: questions">
 			<h1 class="exercise__question exercise__question-number">
-				{{question.index+1}}. {{question.questionText}}
+				<span class="question-number">{{question.index+1}}.</span>
+				<span class="exercise__question-text">{{question.questionText}}</span>
 				<i class="fa " v-class="fa-check-circle:question.correct, fa-times-circle:question.wrong"></i>
 			</h1>
 			<div class="exercise__answer-list-outer">
@@ -477,7 +484,8 @@
 	<div class="owl-carousel">
 		<div class="question" v-repeat="question: questions">
 			<h1 class="exercise__question exercise__question-number">
-				{{question.index+1}}. {{question.questionText}}
+				<span class="question-number">{{question.index+1}}.</span>
+				<span class="exercise__question-text">{{question.questionText}}</span>
 				<i class="fa " v-class="fa-check-circle:question.correct, fa-times-circle:question.wrong"></i>
 			</h1>
 			<div class="exercise__answer-list-outer">
@@ -509,7 +517,8 @@
 	<div class="owl-carousel">
 		<div class="question" v-repeat="question: questions">
 			<h1 class="exercise__question exercise__question-number">
-				{{question.index+1}}. {{question.questionText}}
+				<span class="question-number">{{question.index+1}}.</span>
+				<span class="exercise__question-text">{{question.questionText}}</span>
 				<i class="fa " v-class="fa-check-circle:question.correct, fa-times-circle:question.wrong"></i>
 			</h1>
 			<div class="exercise__answer-list-outer">
