--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 				<span class="exercise__question-text">{{question.questionText}}</span>
 			</div>
 			<div class="row">
-				<div class="exercise__question  col-xs-10">
+				<div class="exercise__question col-xs-8">
 					<div class="exercise__question-content">
 						<img class="exercise__question-image" v-attr="src: imagePath + ($index + 1) + '-1.png'" alt="">
 						<div class="exercise__question-text">
@@ -248,13 +248,17 @@
 						</div>
 					</div>
 				</div>
-				<div class="exercise__answer-list-outer col-xs-2 qtype__tof">
+				<div class="exercise__answer-list-outer col-xs-4 qtype__tof">
 					<ol class="exercise__answer-list">
 						<li class="exercise__answer" v-repeat="answer: question.answers | filterBy 'tof'" v-class="is-correct-answer: answer.correct, is-selected: answer.selected" v-on="click: chooseSingleAnswer(question, answer, question.answers, 'tof')">
 							<div class="exercise__answer-text">
 								<div class="exercise__answer-text-inner">
+									<i class="fa " v-class="
+										fa-square-o: !answer.selected,
+										fa-check-square: answer.selected
+									"></i>
 									<i class="fa" v-class="
-										fa-check-square: $index == 0,
+										fa-check-circle: $index == 0,
 										fa-times-circle: $index == 1,
 										selected: answer.selected
 									"></i>
@@ -271,6 +275,56 @@
 					<ol class="exercise__answer-list">
 						<li class="exercise__answer" v-repeat="answer: question.answers | filterBy 'mc'" v-class="is-correct-answer: answer.correct, is-selected: answer.selected">
 							<div class="exercise__answer-text" v-on="click: chooseMultipleAnswers(question, answer, question.answers)">
+								<div class="exercise__answer-text-inner">
+									<i class="fa fa-square-o" v-show="!answer.selected"></i>
+									<i class="fa fa-check-square" v-show="answer.selected"></i>
+									{{ answer.text }}
+								</div>
+							</div>
+						</li>
+					</ol>
+				</div>
+			</div>
+		</div>
+	</div>
+</script>
+
+<!-- True or False * 2: Text + Images -->
+<script id="layout-16-template" type="x-template">
+	<div class="owl-carousel">
+		<div v-repeat="question: questions">
+			<div class="exercise__question-number">
+				<span class="question-number">{{question.index+1}}.</span>
+				<span class="exercise__question-text">{{question.questionText}}</span>
+			</div>
+			<div class="row">
+				<div class="exercise__answer-list-outer col-xs-12 qtype__tof tof0">
+					<ol class="exercise__answer-list">
+						<li class="exercise__answer" v-repeat="answer: question.answers[0]" v-class="is-correct-answer: answer.correct, is-selected: answer.selected" v-on="click: chooseAnswer(question, answer, question.answers[0], 0)">
+							<img class="exercise__question-image" v-attr="src: imagePath + '1-' + ($index + 1) + '.png'" alt="">
+							<div class="exercise__answer-text">
+								<div class="exercise__answer-text-inner">
+									<i class="fa " v-class="
+										fa-square-o: !answer.selected,
+										fa-check-square: answer.selected
+									"></i>
+									<i class="fa" v-class="
+										fa-check-circle: $index == 0,
+										fa-times-circle: $index == 1,
+										selected: answer.selected
+									"></i>
+									{{ answer.text }}
+								</div>
+							</div>
+						</li>
+					</ol>
+				</div>
+			</div>
+			<div class="row">
+				<div class="exercise__answer-list-outer col-xs-12 qtype__tof tof1">
+					<ol class="exercise__answer-list">
+						<li class="exercise__answer" v-repeat="answer: question.answers[1]" v-class="is-correct-answer: answer.correct, is-selected: answer.selected">
+							<div class="exercise__answer-text" v-on="click: chooseAnswer(question, answer, question.answers[1], 1)">
 								<div class="exercise__answer-text-inner">
 									<i class="fa fa-square-o" v-show="!answer.selected"></i>
 									<i class="fa fa-check-square" v-show="answer.selected"></i>
