--- a/index.html
+++ b/index.html
@@ -584,7 +584,8 @@
 									v-class="
 										is-correct-answer: answer.correct,
 										is-selected: answer.selected
-									" v-on="click: chooseAnswer(question, answer)">
+									">
+									<img class="exercise__answer-image" v-attr="src: imagePath + (question.index + 1) + '-' + ($index + 1) +'.png'" alt="">
 									<span class="exercise__answer-text">
 										{{ answer.text }}
 									</span>
