--- a/index.html
+++ b/index.html
@@ -877,6 +877,7 @@
 	<script src="vendor/dragula/dragula.min.js"></script>
 	<script src="vendor/d3.min.js" charset="utf-8"></script>
 	<script src="js/book.js"></script>
+	<script src="js/exercise_load.js"></script>
 	<script src="js/validatemethods.js"></script>
 	<script src="js/dragndropmethods.js"></script>
 	<script src="js/app.js"></script>
