--- a/index.html
+++ b/index.html
@@ -5,20 +5,14 @@
     <meta name="description" content="">
 	<title>HKEdcity exercises</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="cache-control" content="max-age=0" />
-	<meta http-equiv="cache-control" content="no-cache" />
-	<meta http-equiv="expires" content="0" />
-	<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
-	<meta http-equiv="pragma" content="no-cache" />
-	<link rel="stylesheet" href="vendor/bootstrap/bootstrap.css">
-	<link rel="stylesheet" href="vendor/fontawesome/css/font-awesome.css">
+	<link rel="stylesheet" href="vendor/bootstrap/bootstrap.min.css">
+	<link rel="stylesheet" href="vendor/fontawesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="vendor/owl.carousel/owl.carousel.css">
-	<link rel="stylesheet" href="vendor/owl.carousel/owl.theme.default.css">
+	<link rel="stylesheet" href="vendor/owl.carousel/owl.theme.default.min.css">
 	<link rel="stylesheet" href="vendor/dragula/dragula.min.css">
 	<link rel="stylesheet" href="css/main.css">
-	<script src="js/vue.js"></script>
+	<script src="js/vue.min.js"></script>
 	<script src="vendor/jquery.min.js"></script>
-	<script src="vendor/bootstrap/bootstrap.js"></script>
 	<script src="vendor/lodash.min.js"></script>
 	<script src="vendor/fastclick.js"></script>
 	<script src="vendor/director.min.js"></script>
@@ -873,7 +867,7 @@
 	</div>
 </script>
 	
-	<script src="vendor/owl.carousel/owl.carousel.js"></script>
+	<script src="vendor/owl.carousel/owl.carousel.min.js"></script>
 	<script src="vendor/dragula/dragula.min.js"></script>
 	<script src="vendor/d3.min.js" charset="utf-8"></script>
 	<script src="js/book.js"></script>
