--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 	</script>
 </head>
 <body>
+	<div id="bg"><img src="img/bg.png" alt=""></div>
 	<div class="container">
 		<div id="book" class="content book">
 			<div id="chapter" class="ch{{chapterNum}} ex{{exerciseNum}} layout-{{layoutNumber}}" v-class="all-correct: allCorrect">
@@ -32,6 +33,7 @@
 					<div class="col-xs-9">
 						<div class="exercise__name-outer" v-on="click: alertWindowInfo">
 							<div id="boy">
+								<img src="img/boy.png" style="width: 130px;" alt="">
 							</div>
 							<div class="exercise__name">{{exerciseName}}</div>
 							<div class="exercise__instruction">
