--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	</script>
 </head>
 <body>
-	<div id="bg"><img src="img/bg.png" alt=""></div>
+	<div id="bg"><img src="img/bg_fullscreen.png" alt=""></div>
 	<div class="container">
 		<div id="book" class="content book">
 			<div id="chapter" class="ch{{chapterNum}} ex{{exerciseNum}} layout-{{layoutNumber}}" v-class="all-correct: allCorrect">
