Remove trigger of alertWindowInfo

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<div id="chapter" class="ch{{chapterNum}} ex{{exerciseNum}} layout-{{layoutNumber}}" v-class="all-correct: allCorrect">
 				<div class="row header">
 					<div class="col-xs-9">
-						<div class="exercise__name-outer" v-on="click: alertWindowInfo">
+						<div class="exercise__name-outer">
 							<div id="boy">
 								<img src="img/boy.png" style="width: 120px;" alt="">
 							</div>
