--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<title>HKEdcity exercises</title>
 	<link rel="stylesheet" href="vendor/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="vendor/fontawesome/css/font-awesome.min.css">
-	<link rel="stylesheet" href="vendor/owl.carousel/owl.carousel.css">
-	<link rel="stylesheet" href="vendor/owl.carousel/owl.theme.default.min.css">
+	<link rel="stylesheet" href="vendor/owl.carousel/old/owl.carousel.css">
+	<!-- <link rel="stylesheet" href="vendor/owl.carousel/old/owl.theme.css"> -->
 	<link rel="stylesheet" href="vendor/dragula/dragula.min.css">
 	<link rel="stylesheet" href="css/main.css">
 	<script src="js/vue.min.js"></script>
@@ -868,7 +868,7 @@
 	</div>
 </script>
 	
-	<script src="vendor/owl.carousel/owl.carousel.min.js"></script>
+	<script src="vendor/owl.carousel/old/owl.carousel.js"></script>
 	<script src="vendor/dragula/dragula.min.js"></script>
 	<script src="vendor/d3.min.js" charset="utf-8"></script>
 	<script src="js/book.js"></script>
