--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
 	<div id="bg"><img src="img/bg_fullscreen.png" alt=""></div>
-	<div class="container">
+	<div class="wrapper">
 		<div id="book" class="content book">
 			<div id="chapter" class="ch{{chapterNum}} ex{{exerciseNum}} layout-{{layoutNumber}}" v-class="all-correct: allCorrect">
 				<div class="row header">
