Fix sad and smile face not appearing in android

--- a/index.html
+++ b/index.html
@@ -583,6 +583,8 @@
 										is-correct-answer: answer.correct,
 										is-selected: answer.selected
 									">
+									<img class="icon-face sad" src="img/sad_face.png" alt="">
+									<img class="icon-face smile" src="img/smile_face.png" alt="">
 									<img class="exercise__answer-image" v-attr="src: imagePath + (question.index + 1) + '-' + ($index + 1) +'.png'" alt="">
 									<span class="exercise__answer-text">
 										{{ answer.text }}
@@ -828,6 +830,8 @@
 										is-correct-answer: answer.correct,
 										is-selected: answer.selected
 									">
+									<img class="icon-face sad" src="img/sad_face.png" alt="">
+									<img class="icon-face smile" src="img/smile_face.png" alt="">
 									<img class="exercise__answer-image" v-attr="src: imagePath + (question.index + 1) + '-' + ($index + 1) +'.png'" alt="">
 									<span class="exercise__answer-text">
 										{{ answer.text }}
