--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@
 					</div>
 				</div>
 
-				<div id="exercise-container" class="exercise-container" v-class="answer-revealed:isAnswerRevealed, answer-checked: isAnswerChecked, single-question-ex: totalNumOfQuestion == 1">
+				<div id="exercise-container" class="exercise-container" v-class="
+					answer-revealed:isAnswerRevealed,
+					answer-checked: isAnswerChecked,
+					single-question-ex: totalNumOfQuestion == 1,
+					need-to-reopen: needToReopen
+				">
 					<div class="pager">
 						頁 {{currentQuestion + 1}} / {{totalNumOfQuestion}}
 					</div>
