--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="vendor/owl.carousel/old/owl.carousel.css">
 	<!-- <link rel="stylesheet" href="vendor/owl.carousel/old/owl.theme.css"> -->
 	<link rel="stylesheet" href="vendor/dragula/dragula.min.css">
+	<link rel="stylesheet" href="vendor/videojs/video-js.min.css">
 	<link rel="stylesheet" href="css/main.css">
 	<script src="js/vue.min.js"></script>
 	<script src="vendor/jquery.min.js"></script>
@@ -339,7 +340,6 @@
 		</div>
 	</div>
 </script>
-
 <!-- True or False: Video -->
 <script id="layout-7-template" type="x-template">
 	<div class="owl-carousel">
@@ -352,8 +352,9 @@
 			<div class="exercise__question row">
 				<div class="col-xs-6" v-repeat="video: question.videos">
 					<div class="exercise__question-content">
-						<div class="exercise__question-video">
-							<video style='width: 100%; height: 100%;' controls>
+						<div class="exercise__question-video" v-on="click: resizeVideo(this)">
+							<video id="video-{{question.index}}-{{$index}}" class="video-js vjs-default-skin"
+								style='width: 100%; height: 100%;'>
 						        <source v-attr="src: video" type="video/mp4">
 						    </video>
 						</div>
@@ -886,6 +887,7 @@
 	<script src="vendor/owl.carousel/old/owl.carousel.js"></script>
 	<script src="vendor/dragula/dragula.min.js"></script>
 	<script src="vendor/d3.min.js" charset="utf-8"></script>
+	<script src="vendor/videojs/video.min.js"></script>
 	<script src="js/book.js"></script>
 	<script src="js/exercise_load.js"></script>
 	<script src="js/validatemethods.js"></script>
