--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="vendor/owl.carousel/old/owl.carousel.css">
 	<!-- <link rel="stylesheet" href="vendor/owl.carousel/old/owl.theme.css"> -->
 	<link rel="stylesheet" href="vendor/dragula/dragula.min.css">
-	<link rel="stylesheet" href="vendor/videojs/video-js.min.css">
+	<!-- <link rel="stylesheet" href="vendor/videojs/video-js.min.css"> -->
 	<link rel="stylesheet" href="css/main.css">
 	<script src="js/vue.min.js"></script>
 	<script src="vendor/jquery.min.js"></script>
@@ -884,14 +884,14 @@
 	</div>
 </script>
 	
-	<script src="vendor/owl.carousel/old/owl.carousel.js"></script>
-	<script src="vendor/dragula/dragula.min.js"></script>
-	<script src="vendor/d3.min.js" charset="utf-8"></script>
-	<script src="vendor/videojs/video.min.js"></script>
-	<script src="js/book.js"></script>
-	<script src="js/exercise_load.js"></script>
-	<script src="js/validatemethods.js"></script>
-	<script src="js/dragndropmethods.js"></script>
-	<script src="js/app.js"></script>
+<script src="vendor/owl.carousel/old/owl.carousel.js"></script>
+<script src="vendor/dragula/dragula.min.js"></script>
+<script src="vendor/d3.min.js" charset="utf-8"></script>
+<!-- <script src="vendor/videojs/video.min.js"></script> -->
+<script src="js/book.js"></script>
+<script src="js/exercise_load.js"></script>
+<script src="js/validatemethods.js"></script>
+<script src="js/dragndropmethods.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
