Revert "Change resetJson method to force user to reopen exercise"
This reverts commit 8b66cadc0e195cc84a99503b9bbe17878721e06c.

--- a/index.html
+++ b/index.html
@@ -51,12 +51,7 @@
 					</div>
 				</div>
 
-				<div id="exercise-container" class="exercise-container" v-class="
-					answer-revealed:isAnswerRevealed,
-					answer-checked: isAnswerChecked,
-					single-question-ex: totalNumOfQuestion == 1,
-					need-to-reopen: needToReopen
-				">
+				<div id="exercise-container" class="exercise-container" v-class="answer-revealed:isAnswerRevealed, answer-checked: isAnswerChecked, single-question-ex: totalNumOfQuestion == 1">
 					<div class="pager">
 						頁 {{currentQuestion + 1}} / {{totalNumOfQuestion}}
 					</div>
