--- a/index.html
+++ b/index.html
@@ -348,10 +348,9 @@
 				<div class="col-xs-6" v-repeat="video: question.videos">
 					<div class="exercise__question-content">
 						<div class="exercise__question-video" v-on="click: resizeVideo(this)">
-							<video id="video-{{question.index}}-{{$index}}" class="video-js vjs-default-skin"
-								style='width: 100%; height: 100%;'>
-						        <source v-attr="src: video" type="video/mp4">
-						    </video>
+							<video id="video-{{question.index}}-{{$index}}" style='width: 100%; height: 100%;' controls>
+								<source v-attr="src: video" type="video/mp4">
+							</video>
 						</div>
 					</div>
 				</div>
