7-2 (hidden on correct): display correct answer when click the corresponding button

--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
 						</li>
 					</ol>
 				</div>
-				<div class="dropzones-outer">
+				<div class="dropzones-outer clearfix">
 					<ol id="dropzone-{{$index}}" v-repeat="dropPool: question.dropPools" class="dropzone exercise__answer-list type-{{dropPool.type}}" v-attr="data-text: dropPool.text, data-correct: dropPool.correctCount">
 					</ol>
 				</div>
